extras/k3s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: promobot

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promobot
  namespace: promobot
  labels:
    app: promobot
spec:
  replicas: 1
  selector:
    matchLabels:
      name: promobot
  template:
    metadata:
      labels:
        name: promobot
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: bot
          image: leandro2r/promobot:latest
          imagePullPolicy: Always
          envFrom: &env
            - configMapRef:
                name: promobot-cfg
            - secretRef:
                name: promobot-sct
          resources:
            limits:
              cpu: 250m
              memory: 250M
          args: ["--bot"]
        - name: monitor
          image: leandro2r/promobot:latest
          imagePullPolicy: Always
          envFrom: *env
          resources:
            limits:
              cpu: 2000m
              memory: 2000M
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
