extras/k3s/db-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: promobot

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: promobot
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
        - name: db
          image: leandro2r/promobot:mongodb3-rpi
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: db-volume-mount
            - name: first-run
              mountPath: /root/first_run.sh
              # mountPath: /docker-entrypoint.sh
              subPath: first_run.sh
      volumes:
        - name: db-volume-mount
          persistentVolumeClaim:
            claimName: db-pvc
        - name: first-run
          configMap:
            name: db-firstrun-cfg

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: promobot
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
  - port: 27017
  selector:
    name: db
