extras/k3s/rpi-monitor-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rpi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: rpi
  labels:
    app: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: monitor
  template:
    metadata:
      labels:
        name: monitor
    spec:
      containers:
        - name: monitor
          image: michaelmiklis/rpi-monitor:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: vc
              mountPath: /opt/vc
              readOnly: true
            - name: boot
              mountPath: /boot
              readOnly: true
            - name: sys
              mountPath: /dockerhost/sys
              readOnly: true
            - name: etc
              mountPath: /dockerhost/etc
              readOnly: true
            - name: proc
              mountPath: /dockerhost/proc
              readOnly: true
            - name: usr
              mountPath: /dockerhost/usr/lib
              readOnly: true
            - name: vchiq
              mountPath: /dev/vchiq
              readOnly: true
            - name: vcsm
              mountPath: /dev/vcsm
              readOnly: true
            - name: data-conf
              mountPath: /etc/rpimonitor/data.conf
              subPath: data.conf
      volumes:
        - name: vc
          hostPath:
            path: /opt/vc
        - name: boot
          hostPath:
            path: /boot
        - name: sys
          hostPath:
            path: /sys
        - name: etc
          hostPath:
            path: /etc
        - name: proc
          hostPath:
            path: /proc
        - name: usr
          hostPath:
            path: /usr/lib
        - name: vchiq
          hostPath:
            path: /dev/vchiq
        - name: vcsm
          hostPath:
            path: /dev/vcsm
        - name: data-conf
          configMap:
            name: monitor-conf-cfg

---
apiVersion: v1
kind: Service
metadata:
  name: monitor
  namespace: rpi
  labels:
    app: monitor
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8888
  selector:
    name: monitor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor
  namespace: default
  labels:
    app: monitor
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitor
                port:
                  number: 80
